# MR-ISAM2

./: .gitignore  CMakeLists.txt  Experiment.cpp  Experiment.h  FrontEnd.cpp  FrontEnd.h  ISAM2Copy-impl.cpp  ISAM2Copy-impl.h  ISAM2Copy.cpp  ISAM2Copy.h  ISAM2CopyClique.cpp  ISAM2CopyClique.h  ISAM2CopyParams.cpp  ISAM2CopyParams.h  ISAM2CopyResult.h  ISAM2CopyUpdateParams.h  MRBayesTree.cpp  MRISAM2.cpp  MRISAM2.h  Pose2Point2Factor.h  Utils.h  process_data.py
include/mr_isam2/: MRBayesTree.h  MRISAM2.h  Utils.h
scripts/: CMakeLists.txt  MakePlot.py  runExperiments.cpp
src/: MRBayesTree.cpp  MRISAM2.cpp
tests/: CMakeLists.txt  testGeneral.cpp  testMRBayesTree.cpp  testMRISAM2.cpp  testPose2Point2Factor.cpp
